--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -163,7 +163,10 @@
       "transaction_hash": "Transaction Hash",
       "height": "Height",
       "time": "Time",
-      "transaction_parameters": "Transaction Parameters"
+      "transaction_parameters": "Transaction Parameters",
+      "ckb_transfer": "CKB Transfer",
+      "nervos_dao_deposit": "Nervos DAO Deposit",
+      "nervos_dao_withdraw": "Nervos DAO Withdraw"
     },
     "block": {
       "block": "Block",
