--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -164,7 +164,7 @@
       "height": "区块高度",
       "time": "时间戳",
       "transaction_parameters": "更多交易参数",
-      "ckb_transfer": "CKB 交易",
+      "ckb_transfer": "CKB 转账",
       "nervos_dao_deposit": "Nervos DAO 锁定",
       "nervos_dao_withdraw": "Nervos DAO 解锁"
     },
