chore: add aggron icon

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -101,7 +101,7 @@
       "reddit": "Reddit",
       "youtube": "YouTube",
       "forum": "Forum",
-      "sudt_submit": "sUDT Submit"
+      "sudt_submit": "提交 sUDT 信息"
     },
     "search": {
       "loading": "加载中...",
