feat: impl udt searching layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -252,7 +252,8 @@
       "symbol": "Symbol",
       "total_amount": "Total Amount",
       "holder_addresses": "Holder Addresses",
-      "decimal": "Decimal"
+      "decimal": "Decimal",
+      "search_placeholder": "Address"
     }
   }
 }
