--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -254,7 +254,8 @@
       "total_amount": "总量",
       "holder_addresses": "持币用户数",
       "decimal": "小数位",
-      "search_placeholder": "地址"
+      "search_placeholder": "地址",
+      "unknown_token": "Unknown Token"
     }
   }
 }
