chore: update udt amount format

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,7 @@
       "charts": "Charts",
       "nervos_dao": "Nervos DAO",
       "docs": "Docs",
-      "search_placeholder": "Block / Transaction / Address / Lock Hash",
+      "search_placeholder": "Block/Transaction/Address/Lock Hash",
       "mainnet": "LINA",
       "testnet": "TESTNET",
       "language_en": "EN",
