feat: update address title card

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,9 +126,9 @@
       "lock_until": "Lock Until",
       "estimated": "Estimated",
       "epoch": "Epoch",
-      "code_hash": "Code Hash",
-      "args": "Args",
-      "hash_type": "Hash Type",
+      "code_hash": "Code Hash: ",
+      "args": "Args: ",
+      "hash_type": "Hash Type: ",
       "confirmation": "Confirmation",
       "confirmations": "Confirmations",
       "unable_decode_address": "Unable to decode address",
