--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -126,9 +126,9 @@
       "lock_until": "锁定到期",
       "estimated": "预计",
       "epoch": "Epoch",
-      "code_hash": "Code Hash",
-      "args": "Args",
-      "hash_type": "Hash Type",
+      "code_hash": "Code Hash: ",
+      "args": "Args: ",
+      "hash_type": "Hash Type: ",
       "confirmation": "确认区块",
       "confirmations": "确认区块",
       "unable_decode_address": "地址解析失败",
