feat: impl asset card ckb layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -129,6 +129,7 @@
       "code_hash": "Code Hash: ",
       "args": "Args: ",
       "hash_type": "Hash Type: ",
+      "assets": "Assets",
       "confirmation": "Confirmation",
       "confirmations": "Confirmations",
       "unable_decode_address": "Unable to decode address",
