--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -130,6 +130,7 @@
       "args": "Args: ",
       "hash_type": "Hash Type: ",
       "assets": "资产",
+      "user_define_token": "User Define Token",
       "confirmation": "确认区块",
       "confirmations": "确认区块",
       "unable_decode_address": "地址解析失败",
