feat: add GB note for nervos dao chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,8 @@
       "view_all": "View All",
       "minute": "min",
       "second_ago": "s ago",
-      "ckb_unit": "CKB"
+      "ckb_unit": "CKB",
+      "note": "Note: "
     },
     "toast": {
       "invalid_content": "Please input valid content",
