--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,6 +69,7 @@
       "all_cells": "All Cells",
       "cell_count": "Cell Count",
       "balance_ranking": "Balance Ranking",
+      "balance_distribution": "Balance Distribution",
       "ranking": "Ranking",
       "balance": "Balance",
       "address": "Address",
