--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -69,6 +69,7 @@
       "all_cells": "所有的 Cell",
       "cell_count": "Cell 数量",
       "balance_ranking": "账户余额排名",
+      "balance_distribution": "余额分布",
       "ranking": "排名",
       "balance": "余额",
       "address": "地址",
