--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -70,6 +70,8 @@
       "cell_count": "Cell 数量",
       "balance_ranking": "账户余额排名",
       "balance_distribution": "余额分布",
+      "addresses_balance_group": "余额地址集合数",
+      "addresses_below_specific_balance": "低于特定余额的地址集合数",
       "ranking": "排名",
       "balance": "余额",
       "address": "地址",
