chore: update balance distribution axis and tooltip

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,6 +72,7 @@
       "balance_distribution": "Balance Distribution",
       "addresses_balance_group": "Count of Addresses by Balance Group",
       "addresses_below_specific_balance": "Count of Addresses Below Specific Balance",
+      "addresses_balance": "Balance Range in Group",
       "ranking": "Ranking",
       "balance": "Balance",
       "address": "Address",
