chore: update balance rank chart x-axis

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,7 +69,7 @@
       "all_cells": "All Cells",
       "cell_count": "Cell Count",
       "balance_ranking": "Balance Ranking",
-      "ranking": "Ranking",
+      "rank": "Rank",
       "balance": "Balance",
       "address": "Address",
       "date": "Date",
