--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -81,7 +81,9 @@
       "no_data": "暂无数据...",
       "charts_title": "图表",
       "category_mining": "挖矿数据",
-      "category_activities": "活跃度数据"
+      "category_activities": "活跃度数据",
+      "tx_fee_history": "交易费历史记录",
+      "tx_fee": "交易费 (CKB)"
     },
     "home": {
       "height": "高度",
