feat: add epoch time distribution chart

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -78,6 +78,7 @@
       "address": "地址",
       "date": "日期",
       "time": "时间 (s)",
+      "time_minute": "时间 (min)",
       "log": "（对数坐标）",
       "no_data": "暂无数据...",
       "charts_title": "图表",
@@ -88,7 +89,9 @@
       "tx_fee": "交易费 (CKB)",
       "block_count": "区块数",
       "block_time_distribution": "出块时间分布",
-      "occupied_capacity": "已占用的存储容量"
+      "occupied_capacity": "已占用的存储容量",
+      "epoch_time_distribution": "Epoch 时间分布",
+      "epoch_time": "Epoch 时间"
     },
     "home": {
       "height": "高度",
