--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,6 +78,7 @@
       "address": "Address",
       "date": "Date",
       "time": "Time (s)",
+      "time_minute": "Time (min)",
       "log": "(Log)",
       "no_data": "No data...",
       "charts_title": "Charts",
@@ -88,7 +89,9 @@
       "tx_fee": "Transaction Fee (CKB)",
       "block_count": "blocks",
       "block_time_distribution": "Block Time Distribution",
-      "occupied_capacity": "Occupied Capacity"
+      "occupied_capacity": "Occupied Capacity",
+      "epoch_time_distribution": "Epoch Time Distribution",
+      "epoch_time": "Epoch Time"
     },
     "home": {
       "height": "Height",
