--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,7 +63,10 @@
       "address_count": "Address Count",
       "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Depositors",
       "total_dao_deposit": "Total Nervos DAO Deposit",
-      "total_dao_depositor": "Total Depositors in history",
+      "total_dao_depositor": "Total Depositors in History",
+      "new_dao_deposit_depositor": "New Nervos DAO Deposit & Depositors per Day",
+      "new_dao_deposit": "New Nervos DAO Deposit per Day",
+      "new_dao_depositor": "New Depositors per Day",
       "live_cell": "Live Cell",
       "archived_cell": "Archived Cell",
       "all_cells": "All Cells",
