--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -64,6 +64,9 @@
       "total_dao_deposit_depositor": "Nervos DAO 锁定总额 & 锁定地址数量",
       "total_dao_deposit": "Nervos DAO 锁定总额",
       "total_dao_depositor": "Nervos DAO 累计锁定地址数量",
+      "new_dao_deposit_depositor": "每日新增 Nervos DAO 锁定 & 锁定地址数量",
+      "new_dao_deposit": "每日新增 Nervos DAO 锁定",
+      "new_dao_depositor": "每日新增 Nervos DAO 锁定地址",
       "live_cell": "未花费 Cell",
       "archived_cell": "已花费 Cell",
       "all_cells": "所有的 Cell",
