--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -93,7 +93,7 @@
       "category_block": "区块",
       "tx_fee_history": "交易费历史记录",
       "tx_fee": "交易费 (CKB)",
-      "block_count": "区块数",
+      "block_count": "区块数占比",
       "block_time_distribution": "出块时间分布",
       "occupied_capacity": "已占用的存储容量",
       "epoch_time_distribution": "Epoch 时间分布",
