--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -99,7 +99,10 @@
       "epoch_time_distribution": "Epoch Time Distribution",
       "epochs": "Epochs",
       "epoch_length": "Epoch Length (block)",
-      "epoch_length_distribution": "Epoch Length Distribution"
+      "epoch_length_distribution": "Epoch Length Distribution",
+      "average_block_time": "Average Block Time",
+      "daily_moving_average": "Daily Moving Average",
+      "weekly_moving_average": "Weekly Moving Average"
     },
     "home": {
       "height": "Height",
