--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -99,7 +99,10 @@
       "epoch_time_distribution": "Epoch 时间分布",
       "epochs": "Epoch 数量",
       "epoch_length": "Epoch 长度 (区块)",
-      "epoch_length_distribution": "Epoch 长度分布"
+      "epoch_length_distribution": "Epoch 长度分布",
+      "average_block_time": "平均出块时间",
+      "daily_moving_average": "日滑动平均",
+      "weekly_moving_average": "周滑动平均"
     },
     "home": {
       "height": "高度",
