--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,8 +101,8 @@
       "epoch_length": "Epoch Length (block)",
       "epoch_length_distribution": "Epoch Length Distribution",
       "average_block_time": "Average Block Time",
-      "daily_moving_average": "Daily Moving Average",
-      "weekly_moving_average": "Weekly Moving Average"
+      "daily_moving_average": "Daily Moving Average (s)",
+      "weekly_moving_average": "Weekly Moving Average (s)"
     },
     "home": {
       "height": "Height",
