chore: update charts english title

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,11 +65,11 @@
       "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Depositors",
       "total_dao_deposit": "Total Nervos DAO Deposit",
       "total_dao_depositor": "Total Depositors in History",
-      "new_dao_deposit_depositor": "New Nervos DAO Deposit & Depositors per Day",
+      "new_dao_deposit_depositor": "Daily Deposit",
       "new_dao_deposit": "New Nervos DAO Deposit per Day",
       "new_dao_depositor": "New Depositors per Day",
-      "new_dao_withdraw": "New Nervos DAO Withdraw per Day",
-      "circulation_ratio": "Ratio of Deposit to Circulation",
+      "new_dao_withdraw": "Daily Withdraw",
+      "circulation_ratio": "Deposit to Circulation Ratio",
       "live_cell": "Live Cell",
       "archived_cell": "Archived Cell",
       "all_cells": "All Cells",
@@ -91,7 +91,7 @@
       "category_mining": "Mining Charts",
       "category_activities": "Activities",
       "category_block": "Block",
-      "tx_fee_history": "Transaction Fee History",
+      "tx_fee_history": "Transaction Fee",
       "tx_fee": "Transaction Fee (CKB)",
       "block_count": "Block Ratio",
       "block_time_distribution": "Block Time Distribution",
