--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -102,7 +102,8 @@
       "epoch_length_distribution": "Epoch 长度分布",
       "average_block_time": "平均出块时间",
       "daily_moving_average": "日滑动平均 (s)",
-      "weekly_moving_average": "周滑动平均 (s)"
+      "weekly_moving_average": "周滑动平均 (s)",
+      "new_node_count": "新增节点数量"
     },
     "home": {
       "height": "高度",
