chore: update chart english message

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -95,8 +95,10 @@
       "tx_fee": "交易费 (CKB)",
       "block_count": "区块数占比",
       "block_time_distribution": "出块时间分布",
+      "block_time_distribution_more": "出块时间分布 (最近 30 天)",
       "occupied_capacity": "已占用的存储容量",
       "epoch_time_distribution": "Epoch 时间分布",
+      "epoch_time_distribution_more": "Epoch 时间分布 (最近 500 epochs)",
       "epochs": "Epoch 数量",
       "epoch_length": "Epoch 长度 (区块)",
       "epoch_length_distribution": "Epoch 长度分布",
