--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,8 +66,8 @@
       "total_dao_deposit": "Total Nervos DAO Deposit",
       "total_dao_depositor": "Total Depositors in History",
       "new_dao_deposit_depositor": "Daily Deposit",
-      "new_dao_deposit": "New Nervos DAO Deposit per Day",
-      "new_dao_depositor": "New Depositors per Day",
+      "new_dao_deposit": "Daily New Deposits",
+      "new_dao_depositor": "Daily New Depositors",
       "new_dao_withdraw": "Daily Withdraw",
       "circulation_ratio": "Deposit to Circulation Ratio",
       "live_cell": "Live Cell",
@@ -96,8 +96,10 @@
       "tx_fee": "Transaction Fee (CKB)",
       "block_count": "Block Ratio",
       "block_time_distribution": "Block Time Distribution",
+      "block_time_distribution_more": "Block Time Distribution (Recent 30 days)",
       "occupied_capacity": "Occupied Capacity",
       "epoch_time_distribution": "Epoch Time Distribution",
+      "epoch_time_distribution_more": "Epoch Time Distribution (Recent 500 epochs)",
       "epochs": "Epochs",
       "epoch_length": "Epoch Length (block)",
       "epoch_length_distribution": "Epoch Length Distribution",
