--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,7 @@
       "testnet": "TESTNET",
       "language_en": "EN",
       "language_zh": "简体中文",
-      "explorer": "Explorer",
+      "home": "Home",
       "wallets": "Wallets",
       "wallet_abc": "ABC Wallet",
       "wallet_abc_description": "A safe, user-friendly decentralized cross-platform wallet",
