--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -28,7 +28,7 @@
       "testnet": "测试网",
       "language_en": "EN",
       "language_zh": "简体中文",
-      "explorer": "浏览器",
+      "home": "首页",
       "wallets": "钱包",
       "wallet_abc": "ABC Wallet",
       "wallet_abc_description": "A safe, user-friendly decentralized cross-platform wallet",
