feat: add charts to home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -106,6 +106,7 @@
       "epoch_length_distribution": "Epoch Length Distribution",
       "average_block_time": "Average Block Time",
       "daily_moving_average": "Daily Moving Average (s)",
+      "daily_moving_average_block_time": "Daily Moving Average Block Time (s)",
       "weekly_moving_average": "Weekly Moving Average (s)",
       "new_node_count": "New Node Count",
       "city": "City",
@@ -231,7 +232,7 @@
       "timestamp": "Timestamp",
       "miner": "Miner",
       "difficulty": "Difficulty",
-      "hash_rate_hps": "Hash Rate(H/s)",
+      "hash_rate_hps": "Hash Rate (H/s)",
       "hash_rate": "Hash Rate",
       "uncle_rate": "Uncle Rate",
       "uncle_rate_target": "Uncle rate target",
