--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -105,6 +105,7 @@
       "epoch_length_distribution": "Epoch 长度分布",
       "average_block_time": "平均出块时间",
       "daily_moving_average": "日滑动平均 (s)",
+      "daily_moving_average_block_time": "日滑动平均出块时间 (s)",
       "weekly_moving_average": "周滑动平均 (s)",
       "new_node_count": "新增节点数量",
       "city": "城市",
@@ -230,7 +231,7 @@
       "timestamp": "时间戳",
       "miner": "矿工",
       "difficulty": "难度",
-      "hash_rate_hps": "哈希率(H/s)",
+      "hash_rate_hps": "哈希率 (H/s)",
       "hash_rate": "哈希率",
       "uncle_rate": "叔块率",
       "uncle_rate_target": "叔块率目标值",
