chore: update nervos dao chart message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,9 +63,11 @@
       "transaction_count": "Transaction Count",
       "address_count": "Address Count",
       "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Depositors",
-      "total_dao_deposit": "Total Nervos DAO Deposit",
-      "total_dao_depositor": "Total Depositors in History",
-      "new_dao_deposit_depositor": "Daily Deposit",
+      "total_dao_deposit_title": "Total Deposit",
+      "total_dao_deposit": "Total Deposit",
+      "total_dao_depositor": "Total Depositors",
+      "new_dao_deposit_depositor": "Daily Nervos DAO Deposit",
+      "new_dao_deposit_title": "Daily Deposit",
       "new_dao_deposit": "Daily New Deposits",
       "new_dao_depositor": "Daily New Depositors",
       "new_dao_withdraw": "Daily Withdraw",
