--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -63,12 +63,14 @@
       "transaction_count": "交易数量",
       "address_count": "地址数量",
       "total_dao_deposit_depositor": "Nervos DAO 锁定总额 & 锁定地址数",
-      "total_dao_deposit": "Nervos DAO 锁定总额",
-      "total_dao_depositor": "Nervos DAO 累计锁定地址数",
+      "total_dao_deposit_title": "Nervos DAO 锁定总额",
+      "total_dao_deposit": "锁定总额",
+      "total_dao_depositor": "累计锁定地址数",
       "new_dao_deposit_depositor": "每日新增 Nervos DAO 锁定",
-      "new_dao_deposit": "每日新增 Nervos DAO 锁定",
-      "new_dao_depositor": "每日新增 Nervos DAO 锁定地址",
-      "new_dao_withdraw": "每日新增 Nervos DAO 解锁",
+      "new_dao_deposit_title": "每日新增 Nervos DAO 锁定",
+      "new_dao_deposit": "每日新增锁定",
+      "new_dao_depositor": "每日新增锁定地址",
+      "new_dao_withdraw": "每日新增解锁",
       "circulation_ratio": "锁定量占当前流通量比率",
       "live_cell": "未花费 Cell",
       "archived_cell": "已花费 Cell",
