--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,7 +109,8 @@
       "new_node_count": "New Node Count",
       "city": "City",
       "node_count": "Node Count",
-      "node_distribution": "Node Distribution"
+      "node_distribution": "Node Distribution",
+      "block_propagation_delay_history": "Block Propagation Delay History"
     },
     "home": {
       "height": "Height",
