chore: update chart axis color and category name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,7 +91,7 @@
       "log": "(Log)",
       "no_data": "No data...",
       "charts_title": "Charts",
-      "category_mining": "Mining Charts",
+      "category_mining": "Mining",
       "category_activities": "Activities",
       "category_block": "Block",
       "category_network": "Network",
