chore: add no data to home chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -114,7 +114,8 @@
       "new_node_count": "New Node Count",
       "city": "City",
       "node_count": "Node Count",
-      "node_distribution": "Node Distribution"
+      "node_distribution": "Node Distribution",
+      "chart_no_data": "Available Later"
     },
     "home": {
       "height": "Height",
