chore: update monetary category message

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -95,7 +95,7 @@
       "category_activities": "Activities",
       "category_block": "Block",
       "category_network": "Network",
-      "category_monetary": "Monetary",
+      "category_monetary": "Economic Status",
       "tx_fee_history": "Transaction Fee",
       "tx_fee": "Transaction Fee (CKB)",
       "block_count": "Block Ratio",
