--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -94,7 +94,7 @@
       "category_mining": "挖矿数据",
       "category_activities": "活跃度数据",
       "category_block": "区块",
-      "category_monetary": "经济模型",
+      "category_monetary": "经济情况",
       "tx_fee_history": "交易费历史记录",
       "tx_fee": "交易费 (CKB)",
       "block_count": "区块数占比",
