--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -116,7 +116,7 @@
       "node_count": "节点数量",
       "node_distribution": "节点分布",
       "total_supply": "总供给量",
-      "circulating_supply": "流通量",
+      "circulating_supply": "总流通量",
       "burnt": "销毁量",
       "locked": "未解锁数量",
       "year": "时间 (年)",
@@ -124,7 +124,9 @@
       "nominal_apc_short": "基准补偿率",
       "inflation_rate": "通胀率",
       "nominal_inflation_rate": "名义通胀率",
-      "real_inflation_rate": "实际通胀率"
+      "real_inflation_rate": "实际通胀率",
+      "tradable": "可交易量",
+      "liquidity": "流通量"
     },
     "home": {
       "height": "高度",
