--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -125,6 +125,7 @@
       "nominal_inflation_rate": "名义通胀率",
       "real_inflation_rate": "实际通胀率",
       "tradable": "可交易量",
+      "dao_deposit": "Nervos DAO 锁定",
       "liquidity": "流通量",
       "miner_radio": "挖矿占比",
       "miner_addresses_rank": "最佳矿工 (最近 7 天)"
