feat: init tokens page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
       "charts": "Charts",
       "nervos_dao": "Nervos DAO",
       "faucet": "Faucet",
+      "tokens": "Tokens",
       "docs": "Docs",
       "search_placeholder": "Block/Transaction/Address/Lock Hash/Type Hash",
       "mainnet": "LINA",
