--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -23,6 +23,7 @@
       "charts": "图表",
       "nervos_dao": "Nervos DAO",
       "faucet": "水龙头",
+      "tokens": "代币",
       "docs": "文档",
       "search_placeholder": "区块 / 交易 / 地址 / 锁定脚本哈希 / Type 脚本哈希",
       "mainnet": "LINA",
