--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -319,7 +319,15 @@
       "holder_addresses": "Holder Addresses",
       "decimal": "Decimal",
       "search_placeholder": "Address",
-      "unknown_token": "Unknown Token"
+      "unknown_token": "Unknown Token",
+      "submit_token_info": "Submit Token Info",
+      "unknown_token_description": "The token’s information is incomplete. If you are the owner of this token, please submit token info.",
+      "tokens": "Tokens",
+      "name_symbol": "Name (symbol)",
+      "transactions": "24hr Transactions",
+      "address_count": "Address Count",
+      "created_time": "Created Time",
+      "tokens_empty": "There are tokens at this time."
     }
   }
 }
