--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -319,7 +319,15 @@
       "holder_addresses": "持币用户数",
       "decimal": "小数位",
       "search_placeholder": "地址",
-      "unknown_token": "未知资产"
+      "unknown_token": "未知资产",
+      "submit_token_info": "提交代币信息",
+      "unknown_token_description": "此代币信息暂时不完整，如果你是此代币的拥有者，请提交代币信息",
+      "tokens": "代币",
+      "name_symbol": "代币名称 (符合)",
+      "transactions": "24小时交易数",
+      "address_count": "持币用户数",
+      "created_time": "创建时间",
+      "tokens_empty": "目前没有代币。"
     }
   }
 }
