--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -327,7 +327,7 @@
       "transactions": "24hr Transactions",
       "address_count": "Address Count",
       "created_time": "Created Time",
-      "tokens_empty": "There are tokens at this time."
+      "tokens_empty": "There are no tokens at this time."
     }
   }
 }
