feat: Update transaction detail layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -231,7 +231,7 @@
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
       "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
-      "capacity": "Capacity(CKB)",
+      "capacity": "Capacity/Amount",
       "detail": "Detail",
       "empty_output": "No cell output target",
       "unspent_output": "Unspent Transaction Output",
