--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -230,7 +230,7 @@
       "commit_reward": "提交奖励",
       "proposal_reward": "提案奖励",
       "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读共识协议了解更多信息",
-      "capacity": "Capacity(CKB)",
+      "capacity": "Capacity/Amount",
       "detail": "详情",
       "empty_output": "No cell output target",
       "unspent_output": "未花费的交易输出",
